force-app/main/default/objects/Data_Extract__c/Data_Extract__c.object-meta.xml
<CustomObject>
    <description>This object will be used for scheduling data extract via Report or SOQL</description>
    <label>Data Extract</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Extract Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Extracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>