force-app/main/default/objects/Data_Extract__c/fields/Batch_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Batch_Job_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Batch Job Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>