force-app/main/default/objects/Data_Extract__c/fields/Dataset_Name__c.field-meta.xml
<CustomField>
    <fullName>Dataset_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dataset Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>