force-app/main/default/objects/Data_Extract__c/fields/Metadata__c.field-meta.xml
<CustomField>
    <fullName>Metadata__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Metadata</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>