force-app/main/default/objects/Data_Extract__c/fields/oData_Object__c.field-meta.xml
<CustomField>
    <fullName>oData_Object__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>oData Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>