force-app/main/default/objects/Data_Extract__c/fields/oData_URL__c.field-meta.xml
<CustomField>
    <fullName>oData_URL__c</fullName>
    <description>oData URL</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>oData URL</inlineHelpText>
    <label>oData URL</label>
    <length>200</length>
    <type>Text</type>
</CustomField>