force-app/main/default/objects/Data_Extract__c/fields/SOQL_Query__c.field-meta.xml
<CustomField>
    <fullName>SOQL_Query__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SOQL Query</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>