force-app/main/default/objects/Data_Extract__c/fields/Timestamp_String__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_String__c</fullName>
    <formula>TEXT(YEAR( DATEVALUE(Timestamp__c) )) &amp; &apos;~~~&apos; &amp;   IF(LEN(TEXT(MONTH(DATEVALUE(Timestamp__c)))) == 2, TEXT(MONTH(DATEVALUE(Timestamp__c))), &apos;0&apos; &amp; TEXT(MONTH(DATEVALUE(Timestamp__c))))  &amp; &apos;~~~&apos; &amp;  IF(LEN(TEXT(DAY(DATEVALUE(Timestamp__c)))) == 2, TEXT(DAY(DATEVALUE(Timestamp__c))), &apos;0&apos; &amp; TEXT(DAY(DATEVALUE(Timestamp__c))))</formula>
    <label>Timestamp String</label>
    <type>Text</type>
</CustomField>