force-app/main/default/objects/Data_Extract__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Dataset_Name__c</columns>
    <columns>SOQL_Query__c</columns>
    <columns>Report_Name__c</columns>
    <columns>oData_Object__c</columns>
    <columns>oData_URL__c</columns>
    <columns>Schedule__c</columns>
    <columns>Active__c</columns>
    <columns>Timestamp__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>