force-app/main/default/objects/Data_Extract__c/listViews/oData.listView-meta.xml
<ListView>
    <fullName>oData</fullName>
    <columns>NAME</columns>
    <columns>Dataset_Name__c</columns>
    <columns>Schedule__c</columns>
    <columns>oData_Object__c</columns>
    <columns>oData_URL__c</columns>
    <columns>Active__c</columns>
    <columns>Timestamp__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>oData</value>
    </filters>
    <label>oData</label>
    <language>en_US</language>
</ListView>