force-app/main/default/objects/Data_Extract__c/listViews/Report.listView-meta.xml
<ListView>
    <fullName>Report</fullName>
    <columns>NAME</columns>
    <columns>Dataset_Name__c</columns>
    <columns>Report_Name__c</columns>
    <columns>Schedule__c</columns>
    <columns>Active__c</columns>
    <columns>Timestamp__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Report</value>
    </filters>
    <label>Report</label>
    <language>en_US</language>
</ListView>