force-app/main/default/objects/Data_Extract__c/listViews/SOQL.listView-meta.xml
<ListView>
    <fullName>SOQL</fullName>
    <columns>NAME</columns>
    <columns>Dataset_Name__c</columns>
    <columns>SOQL_Query__c</columns>
    <columns>Schedule__c</columns>
    <columns>Active__c</columns>
    <columns>Timestamp__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>SOQL</value>
    </filters>
    <label>SOQL</label>
    <language>en_US</language>
</ListView>